# intents_libs

./: .gitignore  Cargo.toml  README.md
intents_models/: Cargo.toml
intents_models/src/: error.rs  lib.rs  log.rs
intents_models/src/constants/: chains.rs  mod.rs
intents_models/src/models/: mod.rs
intents_models/src/models/types/: contracts.rs  mod.rs  order.rs  solver_types.rs  user_request_types.rs  user_types.rs  utils.rs
intents_models/src/models/types/common/: dca_order.rs  fulfillment.rs  limit_order.rs  limit_order_request.rs  mod.rs  user_response.rs
intents_models/src/models/types/cross_chain/: fulfillment.rs  mod.rs  order.rs
intents_models/src/models/types/cross_chain/common/: order.rs  solver_types.rs  user_types.rs
intents_models/src/models/types/cross_chain/dca_orders/: mod.rs  order.rs  solver_types.rs  user_order_response.rs  user_request.rs  user_types.rs
intents_models/src/models/types/cross_chain/limit_orders/: mod.rs  order.rs  solver_types.rs  user_order.rs  user_order_response.rs  user_request.rs  user_types.rs
intents_models/src/models/types/order/: execution.rs  mod.rs  order_data_request.rs
intents_models/src/models/types/single_chain/: mod.rs  solver_types.rs
intents_models/src/models/types/single_chain/common/: mod.rs  order.rs  solver_types.rs  user_response.rs  user_types.rs
intents_models/src/models/types/single_chain/dca_order/: order.rs  solver_types.rs  user_order_response.rs  user_request.rs  user_types.rs
intents_models/src/models/types/single_chain/limit_order/: mod.rs  order.rs  solver_types.rs  user_order_response.rs  user_request.rs  user_types.rs
intents_models/src/models/ws_messages/: api_response.rs  auctioneer_message.rs  helpers.rs  mod.rs  solver_message.rs
intents_models/src/network/: client_rate_limit.rs  http.rs  mod.rs  nats.rs  rate_limit.rs
intents_models/src/slack/: actions.rs  api.rs  client.rs  constants.rs  manager.rs  mod.rs  responses.rs  worker.rs
swap_estimator_rust/: .env  Cargo.toml
swap_estimator_rust/schemas/graphql/: codex.graphql  codex_queries.graphql
swap_estimator_rust/src/: error.rs  lib.rs
swap_estimator_rust/src/apis/: mod.rs
swap_estimator_rust/src/apis/shyft/: mod.rs  responses.rs
swap_estimator_rust/src/models/: estimate.rs
swap_estimator_rust/src/monitoring/: client.rs  manager.rs  messages.rs  mod.rs
swap_estimator_rust/src/prices/: estimating.rs  mod.rs
swap_estimator_rust/src/prices/codex/: mod.rs  models.rs  pricing.rs  utils.rs
swap_estimator_rust/src/prices/defillama/: estimating.rs  mod.rs  pricing.rs  responses.rs
swap_estimator_rust/src/prices/gecko_terminal/: mod.rs  pricing.rs  responses.rs
swap_estimator_rust/src/routers/: constants.rs  estimate.rs  mod.rs  swap.rs
swap_estimator_rust/src/routers/aftermath/: aftermath.rs  mod.rs  rate_limit.rs  responses.rs
swap_estimator_rust/src/routers/jupiter/: jupiter.rs  mod.rs  models.rs  rate_limit.rs
swap_estimator_rust/src/routers/liquidswap/: liquidswap.rs  mod.rs  rate_limit.rs  requests.rs  responses.rs
swap_estimator_rust/src/routers/one_inch/: mod.rs  one_inch.rs  rate_limit.rs  requests.rs  responses.rs
swap_estimator_rust/src/routers/paraswap/: mod.rs  paraswap.rs  rate_limit.rs  requests.rs  responses.rs
swap_estimator_rust/src/routers/raydium/: mod.rs  rate_limit.rs  raydium.rs  requests.rs  responses.rs
swap_estimator_rust/src/routers/relay/: evm.rs  mod.rs  relay.rs  requests.rs  responses.rs
swap_estimator_rust/src/routers/uniswap/: mod.rs  rate_limit.rs  requests.rs  responses.rs  uniswap.rs
swap_estimator_rust/src/routers/zero_x/: mod.rs  rate_limit.rs  requests.rs  responses.rs  zero_x.rs
swap_estimator_rust/src/tests/: mod.rs
swap_estimator_rust/src/utils/: evm.rs  exact_in_reverse_quoter.rs  json.rs  limit_amount.rs  mod.rs  number_conversion.rs  uint.rs
