[workspace]
members  = ["intents_models", "swap_estimator_rust"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["arbitrary_precision"] }
futures-util = "0.3"
tracing = "0.1.41"
error-stack = { version = "0.5.0", features = ["serde"] }
thiserror = "2.0.11"
reqwest = { version = "0.12.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = [
    "rustls-tls-webpki-roots",
    "connect",
] }
serde_repr = "0.1.20"
sha2 = "0.10.8"
strum = "0.27.1"
strum_macros = "0.27"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
async-nats = "0.42.0"
futures = "0.3.31"
rustls = { version = "0.23.28", features = ["ring"] }
once_cell = "1.21.3"
serde_with = "3.13.0"
async-trait = "0.1.88"
dotenv = "0.15.0"
rust_decimal = { version = "1.39.0", features = ["maths"] }
dashmap = "6.1.0"
uint = "0.10.0"
governor = "0.10.1"
