[package]
name    = "intents_models"
version = "0.1.0"
edition = "2024"

[dependencies]
strum              = { workspace = true }
strum_macros       = { workspace = true }
error-stack        = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_repr         = { workspace = true }
serde_with         = { workspace = true }
reqwest            = { workspace = true }
tracing-subscriber = { workspace = true }
