[package]
name    = "swap_estimator_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
futures-util      = { workspace = true }
tracing           = { workspace = true }
error-stack       = { workspace = true }
thiserror         = { workspace = true }
reqwest           = { workspace = true }
tracing-subscriber= { workspace = true }
lazy_static       = { workspace = true }
serde_with        = { workspace = true }
async-trait       = { workspace = true }
dotenv            = { workspace = true }
tokio-tungstenite = { workspace = true }
rust_decimal      = { workspace = true }
dashmap           = { workspace = true }
strum             = { workspace = true }
uint              = { workspace = true }
intents_models    = { path = "../intents_models" }
# intents_models = { git = "https://github.com/shogun-network/intents_libs.git", tag = "v0.0.23" }
